fix the view height on mobile browsers

--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -7,7 +7,8 @@
   );
   color: #fff;
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
   justify-content: center;
